# GCompris

./: configure.ac
po/: POTFILES.in
src/: Makefile.am
src/explore-activity/: Makefile.am  explore.py  explore.xml.in  init_path.sh
src/explore_farm_animals-activity/: Makefile.am  explore_farm_animals.py  explore_farm_animals.xml.in  init_path.sh
src/explore_farm_animals-activity/resources/explore_farm_animals/: Makefile.am  content.desktop.in
src/explore_world_animals-activity/: Makefile.am  explore_world_animals.xml.in  init_path.sh
src/explore_world_music-activity/: Makefile.am  explore_world_music.xml.in  init_path.sh
src/explore_world_music-activity/resources/explore_world_music/: Makefile.am  content.desktop.in
src/explore_world_template-activity/: .gitignore  Makefile.am  explore_world_template.py  explore_world_template.xml.in  init_path.sh
src/got_rhythm-activity/: .gitignore  Makefile.am  got_rhythm.py  got_rhythm.xml.in  init_path.sh
src/note_names-activity/: Makefile.am  gcomprismusic.py  init_path.sh  note_names.py  note_names.xml.in
src/piano_composition-activity/: Makefile.am  gcomprismusic.py  init_path.sh  piano_composition.py  piano_composition.xml.in
src/piano_composition-activity/resources/piano_composition/: Makefile.am  melodies.desktop.in  melodies.txt
src/piano_composition-activity/resources/piano_composition/bass_pitches/: Makefile.am
src/piano_composition-activity/resources/piano_composition/bass_pitches/1/: Makefile.am
src/piano_composition-activity/resources/piano_composition/bass_pitches/2/: Makefile.am
src/piano_composition-activity/resources/piano_composition/bass_pitches/4/: Makefile.am
src/piano_composition-activity/resources/piano_composition/bass_pitches/8/: Makefile.am
src/piano_composition-activity/resources/piano_composition/buttons/: Makefile.am
src/piano_composition-activity/resources/piano_composition/playActivities/: Makefile.am
src/piano_composition-activity/resources/piano_composition/playActivities/background/: Makefile.am
src/piano_composition-activity/resources/piano_composition/treble_pitches/1/: Makefile.am
src/piano_composition-activity/resources/piano_composition/treble_pitches/2/: Makefile.am
src/piano_composition-activity/resources/piano_composition/treble_pitches/4/: Makefile.am
src/piano_composition-activity/resources/piano_composition/treble_pitches/8/: Makefile.am
src/piano_player-activity/: .gitignore  Makefile.am  gcomprismusic.py  init_path.sh  piano_player.py  piano_player.xml  piano_player.xml.in
src/play_piano-activity/: init_path.sh  play_piano.py  play_piano.xml.in
src/play_rhythm-activity/: Makefile.am  init_path.sh  play_rhythm.py  play_rhythm.xml.in
(+20 files in other folders)
