imgdir = $(pkgdatadir)/@PACKAGE_DATA_DIR@/explore_farm_animals
img_DATA = \
	cat.JPG\
	cat.ogg\
	chicken.JPG\
	chickens.ogg\
	content.desktop.in\
	correctpic.png\
	cow.jpg\
	cow.ogg\
	dog.jpg\
	dog.ogg\
	duck.jpg\
	duck.ogg\
	farm-animals.jpg\
	horse.jpg\
	horse.ogg\
	owl.jpg\
	owl.ogg\
	pig.jpg\
	pig.ogg\
	questionpic.png\
	rooster.jpg\
	rooster.ogg\
	rooster.wav

EXTRA_DIST = $(img_DATA)
