imgdir = $(pkgdatadir)/@PACKAGE_DATA_DIR@/explore_world_music
img_DATA = \
	africa.ogg\
	africa.png\
	america.ogg\
	america.png\
	australia.ogg\
	australia.png\
	beethoven.ogg\
	content.desktop.in\
	dancingWorld.png\
	ireland.ogg\
	ireland.png\
	italy.ogg\
	italy.png\
	japan.ogg\
	japan.png\
	mexico.ogg\
	mexico.png\
	middleeast.ogg\
	middleeast.png\
	orchestra.png\
	star.png\
	suitcase.png\
	worldmap.png

EXTRA_DIST = $(img_DATA)