SUBDIRS = bass_pitches buttons playActivities treble_pitches

imgdir = $(pkgdatadir)/@PACKAGE_DATA_DIR@/piano_composition
img_DATA = \
	bassClef.png \
	blackflat.png \
	blacksharp.png \
	eighthNote.png \
	flag.png \
	halfNote.png \
	happyNote.png \
	keyboard.png \
	load.png \
	melodies.txt \
	note_highlight.png \
	quarterNote.png \
	sadNote.png \
	save.png \
	tool-load.png \
	tool-save.png \
	trebleClef.png \
	wholeNote.png


EXTRA_DIST = $(img_DATA)

