SUBDIRS = bass_pitches buttons playActivities treble_pitches

imgdir = $(pkgdatadir)/@PACKAGE_DATA_DIR@/piano_composition
img_DATA = \
	bach.png \
	banana.png \
	bassClef.png \
	blackflat.png \
	blacksharp.png \
	eighthNote.png \
	flag.png \
	gsoc2012.png \
	halfNote.png \
	happyNote.png \
	keyboard.png \
	load.png \
	melodies.txt \
	mozart.png \
	note_highlight.png \
	quarterNote.png \
	sadNote.png \
	save.png \
	tool-load.png \
	tool-save.png \
	trebleClef.png \
	wholeNote.png


EXTRA_DIST = $(img_DATA)

