SUBDIRS = bass_pitches buttons playActivities treble_pitches

imgdir = $(pkgdatadir)/@PACKAGE_DATA_DIR@/piano_composition
img_DATA = \
	bach.jpg\
	banana.png\
	bassClef.png\
	blackflat.png\
	blacksharp.png\
	eighthNote.png\
	flag.png\
	gsoc2012.jpg\
	halfNote.png\
	happyNote.png\
	keyboard.png\
	load.png\
	melodies.desktop.in\
	mozart.jpg\
	note_highlight.png\
	quarterNote.png\
	sadNote.png\
	save.png\
	trebleClef.png\
	wholeNote.png



EXTRA_DIST = $(img_DATA)
